ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: argocd-server
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
  - host: argocd.adiatma.tech
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - argocd.adiatma.tech
    secretName: argocd.adiatma.tech
